--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
     <profile>
       <id>devhost</id>
       <properties>
-        <site.url>http://devhost/</site.url>
+        <site.url>http://192.168.43.131/</site.url>
       </properties>
     </profile>
     <profile>
@@ -171,7 +171,7 @@
     <profile>
       <id>grid</id>
       <properties>
-        <grid.url>http://localhost:4444/wd/hub/</grid.url>
+        <grid.url>https://sergey790:kVZQTXfDgiMyP1qxsvyn@hub.browserstack.com/wd/hub</grid.url>
       </properties>
     </profile>
   </profiles>
