--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 			<artifactId>selenium-java</artifactId>
 			<version>2.43.1</version>
 		</dependency>
+		<dependency>
+			<groupId>ru.stqa.selenium</groupId>
+			<artifactId>webdriver-factory</artifactId>
+			<version>2.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources> 
